# ics7-cn-cw

./: .gitignore  README.md
src/: CMakeLists.txt  Dockerfile  Makefile  client.c  main.c
src/logger/: logger.c  logger.h
src/server/: content.h  request.c  request.h  responses.h  server.c  server.h  socket_poll.c  socket_poll.h  thread_pool.c
src/test/: comp.py
tex/: Makefile  main.tex
tex/assets/graphs/: poll.graphml  thread.graphml
tex/pages/: 01-abstract.tex  02-naming.tex  03-intro.tex  10-analysis.tex  20-design.tex  30-tech.tex  40-research.tex  50-coclusion.tex  60-bibliography.bib
